<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- Not translated strings -->
    <string name="server_url">www.cbr.ru</string>

<!-- Activitys items -->
    <string name="app_name">Information of the CB RF</string>
    <string name ="app_title">Information of the CB RF</string>
    <string name="vChcodeHead">Currency code</string>
    <string name="vNomHead">Nominal</string>
    <string name="vCursHead">Rate</string>
    <string name="vNameHead">Name of currency</string>
    <string name="appTitleDatePrefix">on date</string>
<!-- Dialogs strings -->
    <string name="dataDlgMessage">Set the date of the information.</string>
    <string name="netSettingsDlgMessage">This application requires network access. To download data, enable GPRS or WiFi.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Load data from server…</string>
    <string name="futureMsg">No data on this date.</string>
    <string name="futureTitle">Oops, wrong data.</string>
    <string name="notRespondDlgTitle">Data request</string>
    <string name="notRespondDlgMsg">Server is not available or not responding. Retry?</string>
    <string name="selectInfoItem">Select the information displayed...</string>
    <!-- Menu strings -->
    <string name="settings">Settings</string>
    <string name="setData">Get information on date</string>
    <string name="exit">Exit</string>
    <string name="rootmenu_title">Menu and settings</string>
    <string name="refresh">Load last data.</string>
    <!-- Other -->
    <string name="valItemVisible">Visible</string><string name="Select">Select</string>
    <string name="preference_title">Update preferences</string>
    <string name="auto_update">Auto refresh</string>
    <string name="autoupdate_summary">Select to turn on automatic updating</string>
    <string name="preference_time_title">Refresh time</string>
    <string name="preference_time_summary">00:00</string>
    <string name="preference_uprate_category_title">Set autorefresh of information</string>
    <string name="exchange_rate_change">Exchange rate change.</string>
    <string name="obtained_change_in_exchange_rates">Obtained change in exchange rates.</string>
    <string name="sound_notify">Sound notification</string>
    <string name="sound_notify_summary">Sound notification in case of an update of exchange rates</string>
    <string name="update_pref_freq_title">Refresh frequency</string>
    <string name="update_pref_freq_summary">The frequency with which requests are made ​​when an attempt to refresh</string>
    <string name="autoupdate_met_summary">Select to update price information autoupdate</string>
    <string name="preference_update_met_group_title">Update metal information</string>
    <string name="currency_page_header">Exchange</string>
    <string name="metal_page_header">Metals</string>
    <string name="met_info_interval_title">The number of days at the request of the dynamics of prices for precious metals</string>
    <string name="met_info_interval_summary">Query Date Range of prices for precious metals</string>
    <string name="preference_autoupdate_met_info">Auto-update of prices for precious metals</string>
    <string name="preference_met_time_summary">00:00</string>
    <string name="select_widget_info_type">Choice type of information</string>
    <string name="rollback">Rollback yesterday</string>
    <string name="metall_rate_change">Metall rate change</string>
    <string name="changes_notify_title">Show notification</string>
    <string name="changes_notify_summary">Show notification in status bar if application get new information</string>
    <string name="obtained_change_in_metall_rates">Some new metal prices</string>
</resources>
