<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vFlagHead" android:layout_gravity="center_horizontal|top"
            android:width="@dimen/vFlagColDim"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vChcodeHead"
            android:id="@+id/vChCodeHead" android:layout_gravity="center|top"
            android:width="@dimen/vChCodeColDim" android:layout_marginLeft="@dimen/rowTextLeftMargin"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vNomHead"
            android:id="@+id/vNomHead" android:layout_gravity="center|top"
            android:width="@dimen/vNomColDim" android:layout_marginLeft="@dimen/rowTextLeftMargin"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vCursHead"
            android:id="@+id/vCursHead" android:layout_gravity="center_horizontal|top"
            android:width="@dimen/vCursColDim" android:layout_marginLeft="@dimen/rowTextLeftMargin"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/vNameHead"
            android:id="@+id/vNameHead" android:layout_marginLeft="@dimen/rowTextLeftMargin"/>
</LinearLayout>